<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransferNftActivity"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <ImageView
        android:id="@+id/nft_image"
        android:layout_width="wrap_content"
        android:contentDescription="@string/get_nft_of_the_user"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nft_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="250px"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nft_image" />

    <EditText
        android:id="@+id/receiverEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/nft_name"
        android:hint="@string/enter_reciever_email"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_marginHorizontal="30px"
        android:text="@string/transfer"
        android:layout_marginTop="20px"
        android:id="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receiverEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>