<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metakeep"
        android:textSize="75dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="200px"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_weight="1"
        android:autofillHints="emailAddress"
        android:hint="@string/enter_the_user_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100px"
        android:inputType="text"
        android:text="" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/fetchNft"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_margin="10dp"
        android:shadowColor="@color/black"
        android:text="@string/get_nft"
        android:textColorHighlight="@color/black"
        android:textSize="10dp"
        android:gravity="center"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />


</LinearLayout>